--- a/templates/accounts/account/password_reset_done.html
+++ b/templates/accounts/account/password_reset_done.html
@@ -9,16 +9,15 @@
     <div class="row justify-content-center py-5">
         <div class="col-lg-4">
             <div class="card">
-{#                <div class="panel-body">#}
-                    <div class="card-header"><h4>{% trans "Password Reset" %}</h4></div>
+                <div class="card-header"><h4>{% trans "Password Reset" %}</h4></div>
+                <div class="card-body">
                     {% if user.is_authenticated %}
-                    {% include "account/snippets/already_logged_in.html" %}
+                        {% include "account/snippets/already_logged_in.html" %}
                     {% endif %}
-
-                    <div class="card-body">
-                        {% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}
-                    </div>
-{#                </div>#}
+                    {% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few
+                        minutes.
+                    {% endblocktrans %}
+                </div>
             </div>
         </div>
     </div>
