--- a/templates/base.html
+++ b/templates/base.html
@@ -188,6 +188,7 @@
 
 {% block js_file %}
     <script type="text/javascript" src="{% static 'js/lib/require.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/base.js' %}?v={{ APP_VERSION }}"></script>
 {% endblock %}
 
 </body>
