--- a/templates/ctb/about.html
+++ b/templates/ctb/about.html
@@ -17,6 +17,7 @@
         <div>
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
+                    <li class="breadcrumb-item">About</li>
                     <li class="breadcrumb-item active" aria-current="page">About the Project</li>
                 </ol>
             </nav>
@@ -84,9 +85,4 @@
 
         </div>
     </div>
-{% endblock %}
-
-{% block js_file %}
-	{{ block.super }}
-    <script type="text/javascript" src="{% static 'js/base.js' %}?v={{ APP_VERSION }}"></script>
 {% endblock %}
