--- a/templates/ctb/podcasts_and_videos.html
+++ b/templates/ctb/podcasts_and_videos.html
@@ -17,7 +17,7 @@
         <div>
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="{% url 'resources' %}">Resources</a></li>
+                    <li class="breadcrumb-item">Resources</li>
                     <li class="breadcrumb-item active" aria-current="page">Podcasts and Videos</li>
                 </ol>
             </nav>
@@ -81,9 +81,4 @@
 
         </div>
     </div>
-{% endblock %}
-
-{% block js_file %}
-	{{ block.super }}
-    <script type="text/javascript" src="{% static 'js/base.js' %}?v={{ APP_VERSION }}"></script>
 {% endblock %}
