--- a/templates/ctb/research_projects.html
+++ b/templates/ctb/research_projects.html
@@ -17,7 +17,7 @@
         <div>
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="{% url 'researchers_page' %}">For Researchers</a></li>
+                    <li class="breadcrumb-item">Research</li>
                     <li class="breadcrumb-item active" aria-current="page">Research Projects Using CTB Materials</li>
                 </ol>
             </nav>
@@ -51,12 +51,12 @@
                             Access to Materials
                         </a>
                     </li>
-                    <li class="side-navigation__item ">
-                        <a class="side-navigation__link" href="https://www.chernobyltissuebank.com/biosample-search/"
-                           target="_blank">
-                            CTB Biosample Search
-                        </a>
-                    </li>
+{#                    <li class="side-navigation__item ">#}
+{#                        <a class="side-navigation__link" href="https://www.chernobyltissuebank.com/biosample-search/"#}
+{#                           target="_blank">#}
+{#                            CTB Biosample Search#}
+{#                        </a>#}
+{#                    </li>#}
                     <li class="side-navigation__item  side-navigation__link--active ">
                         <a class="side-navigation__link" href="{% url 'research_projects' %}">
                             Research Projects Using CTB Materials
@@ -73,9 +73,4 @@
 
         </div>
     </div>
-{% endblock %}
-
-{% block js_file %}
-	{{ block.super }}
-    <script type="text/javascript" src="{% static 'js/base.js' %}?v={{ APP_VERSION }}"></script>
 {% endblock %}
