--- a/templates/ctb/research_projects_2001_2009.html
+++ b/templates/ctb/research_projects_2001_2009.html
@@ -17,6 +17,8 @@
         <div>
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
+                    <li class="breadcrumb-item">Research</li>
+                    <li class="breadcrumb-item"><a href="{% url 'research_projects' %}">Research Projects Using CTB Materials</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Research Projects - 2001-2009</li>
                 </ol>
             </nav>
@@ -572,9 +574,4 @@
                 <p>&nbsp;</p></div>
         </div>
     </div>
-{% endblock %}
-
-{% block js_file %}
-	{{ block.super }}
-    <script type="text/javascript" src="{% static 'js/base.js' %}?v={{ APP_VERSION }}"></script>
 {% endblock %}
