--- a/templates/ctb/contact.html
+++ b/templates/ctb/contact.html
@@ -14,30 +14,33 @@
 {% block page_header %}
     <div class="container">
         <h3 class="page-banner">Contact Us</h3>
-        <div>
-            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
-                </ol>
-            </nav>
-        </div>
+        {#        <div>#}
+        {#            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">#}
+        {#                <ol class="breadcrumb">#}
+        {#                    <li class="breadcrumb-item active" aria-current="page">Contact Us</li>#}
+        {#                </ol>#}
+        {#            </nav>#}
+        {#        </div>#}
     </div>
 
 {% endblock %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
+    <div class="container mb-5">
 
-            <div class="col pb-4">
-
-                <p><strong>If you would like any further information or have any queries regarding the Tissue Bank,
-                    please contact:</strong></p>
-                <h3>Professor Geraldine Thomas</h3>
-                <div class="row">
-                    <div class="col-xl-6">
-                        <p>
-                            <strong>CTB Project Director</strong><br>
+        <div class="fw-light text-center">
+            If you would like any further information or have any queries regarding the Tissue Bank, please
+            contact:
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-5">
+                <div class="card mt-3">
+                    <div class="card-header py-2 px-5"><h5>Professor Geraldine Thomas</h5>
+                        <div class="card-subtitle text-muted"><strong>CTB Project Director</strong>
+                        </div>
+                    </div>
+                    <div class="card-body py-2 px-5">
+                        <p class="card-text">
                             Department of Surgery and Cancer<br>
                             Imperial College London<br>
                             Room 11L05<br>
@@ -45,23 +48,14 @@
                             Fulham Palace Road<br>
                             London W6 8RF
                         </p>
-                    </div>
-                    <div class="col-xl-6">
-                        <p>
-                            Email:<br>
-                            <a href="mailto:chernobyltissuebank@imperial.ac.uk">chernobyltissuebank@imperial.ac.uk</a>
-                        </p>
-                        <p>
-                            Phone:<br>
-                            <a href="tel:+44-203-311-7342">+44 (0)203 311 7342</a>
-                        </p>
+
+                        <div class="text-muted">Email: <a href="mailto:chernobyltissuebank@imperial.ac.uk">chernobyltissuebank@imperial.ac.uk</a>
+                        </div>
+                        <div class="text-muted">Phone: <a href="tel:+44-203-311-7342">+44 (0)203 311 7342</a>
+                        </div>
                     </div>
                 </div>
-
             </div>
-
-
-
         </div>
     </div>
 {% endblock %}
