--- a/templates/ctb/landing.html
+++ b/templates/ctb/landing.html
@@ -25,20 +25,19 @@
 {% block page_name %}landing{% endblock %}
 {% block body_class %}landing{% endblock %}
 {% block content %}
-    <div class="container text-center">
+    <div class="container text-center my-5">
 
         <div class="row pt-5">
-            <div class="col fs-4">
+            <div class="col fs-5">
                 WELCOME TO
             </div>
         </div>
         <div class="row">
-            <div class="col fw-bold" style="font-size: 4.5rem;">
+            <div class="col fw-bold" style="font-size: 2.5rem;">
             Chernobyl Tissue Bank
             </div>
         </div>
-        <div class="row py-5 fs-3">
-            <div class="col"></div>
+        <div class="row py-5 fs-4 justify-content-center">
             <div class="col-9">
                 <div>
                     The CTB is a research tissue bank that was established to collect, document, store, and issue to
@@ -49,7 +48,6 @@
                 </div>
                 <div class="py-3">If you are looking for information on the Chernobyl accident itself please go to <a href="{% url 'podcasts_and_videos' %}">Podcasts &amp; Videos</a> and <a href="{% url 'useful_links' %}">General Information about the Chernobyl Accident</a>.</div>
             </div>
-            <div class="col"></div>
 
         </div>
 {#        <div class="row py-5">#}
