--- a/templates/ctb/news.html
+++ b/templates/ctb/news.html
@@ -29,46 +29,49 @@
     <div class="container">
         <div class="row">
             <div id="news">
-                <div class="news-list row">
-                    <div class="col-lg-4 col-md-6 pb-4">
+{#                <div class="row">#}
+                <div class="row row-cols-2 row-cols-md-3 g-4">
+                    <div class="col">
+{#                    <div class="col-lg-4 col-md-6 pb-4">#}
                         <div class="card">
-                            <a href="news.htm?id=1" class="card__img-link"><img
-                                    src="{% static 'img/newsreactorsite.jpeg' %}" width="756"
-                                    class="card-img-top"
-                                    alt="The latest study from the use of samples supplied by the CTB is now available online image"></a>
+                            <a href="news.htm?id=1" class="card__img-link">
+                                <img src="{% static 'img/newsreactorsite.jpeg' %}" class="card-img-top"
+                                     alt="The latest study from the use of samples supplied by the CTB is now available online image">
+                            </a>
                             <div class="card-body">
-                                <h3 class="card__title"><a href="news.htm?id=1" class="card__title__link">The latest
-                                    study from the use of samples supplied by the CTB is now available online</a></h3>
-                                <p class="card__text">The study used comprehensive genomic, transcriptomic and
+                                <div class="card-title"><a href="news.htm?id=1">The latest
+                                    study from the use of samples supplied by the CTB is now available online</a></div>
+                                <p class="card-text">The study used comprehensive genomic, transcriptomic and
                                     epigenomic profiling to investigate the contribution of environmental radiation to
                                     characteristics of papillary carcinoma.</p>
-                                <a href="news.htm?id=1" class="card__read-more">Read more</a>
+                                <a href="news.htm?id=1" class="card-link">Read more</a>
                             </div>
                             <div class="card-footer">
-                                <div class="card__date">
-                                    23rd April, 2021
-                                </div>
+                                <small class="text-muted">
+                                    April 23rd, 2021
+                                </small>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 pb-4">
+                    <div class="col">
+{#                    <div class="col-lg-4 col-md-6 pb-4">#}
                         <div class="card">
                             <a href="news.htm?id=2" class="card__img-link"><img
-                                    src="{% static 'img/newslandscape.jpeg' %}" width="756"
+                                    src="{% static 'img/newslandscape.jpeg' %}"
                                     class="card-img-top"
                                     alt="General Meeting of the National Academy of Medical Sciences of Ukraine, 14th April 2021 image"></a>
                             <div class="card-body">
-                                <h3 class="card__title"><a href="news.htm?id=2" class="card__title__link">General
+                                <div class="card-title"><a href="news.htm?id=2" class="card__title__link">General
                                     Meeting of the National Academy of Medical Sciences of Ukraine, 14th April 2021</a>
-                                </h3>
-                                <p class="card__text">This meeting was held to mark the 35th anniversary of the
+                                </div>
+                                <p class="card-text">This meeting was held to mark the 35th anniversary of the
                                     Chernobyl accident.</p>
-                                <a href="news.htm?id=2" class="card__read-more">Read more</a>
+                                <a href="news.htm?id=2" class="card-link">Read more</a>
                             </div>
                             <div class="card-footer">
-                                <div class="card__date">
-                                    19th April, 2021
-                                </div>
+                                <small class="text-muted">
+                                    April 19th, 2021
+                                </small>
                             </div>
                         </div>
                     </div>
