jinja framework adjusted

--- a/templates/ctb/about_project.html
+++ b/templates/ctb/about_project.html
@@ -3,23 +3,23 @@
 {% load static %}
 
 {% block title %}
-    CTB | Aims of the Project
+    CTB | About the Project
 {% endblock %}
 
 {% block description %}
-    Aims of the Project
+    About the Project
 {% endblock %}
 
-{% block page_name %}aims_page{% endblock %}
+{% block page_name %}about_page{% endblock %}
 
 {% block page_header %}
     <div class="container">
-        <h3 class="page-banner">Aims of the Project</h3>
+        <h3 class="page-banner">About the Project</h3>
         <div>
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item">About</li>
-                    <li class="breadcrumb-item active" aria-current="page">Aims of the Project</li>
+                    <li class="breadcrumb-item active" aria-current="page">About the Project</li>
                 </ol>
             </nav>
         </div>
@@ -52,4 +52,5 @@
         information that may be of value to the health of future generations is not lost. Although the post
         Chernobyl thyroid tumours are associated with a particular aetiology, they may also provide clues to
         the pathogenesis and molecular biology of thyroid carcinoma in general.</p>
+
 {% endblock %}
