--- a/templates/ctb/research.html
+++ b/templates/ctb/research.html
@@ -12,23 +12,23 @@
             <div class="col-md-3 pb-4">
                 <ul class="side-navigation">
                     <li class="side-navigation__item side-navigation__item--heading">
-                        <a href="{% url 'about_project' %}" class="side-navigation__link  side-navigation__link--active">
-                            About the Project
+                        <a href="{% url 'researchers_page' %}" class="side-navigation__link ">
+                            For Researchers
                         </a>
                     </li>
                     <li class="side-navigation__item ">
-                        <a class="side-navigation__link" href="{% url 'aims_page' %}">
-                            Aims of the Project
+                        <a class="side-navigation__link" href="{% url 'access_to_materials' %}">
+                            Access to Materials
+                        </a>
+                    </li>
+                    <li class="side-navigation__item  side-navigation__link--active ">
+                        <a class="side-navigation__link" href="{% url 'research_projects' %}">
+                            Research Projects Using CTB Materials
                         </a>
                     </li>
                     <li class="side-navigation__item ">
-                        <a class="side-navigation__link" href="{% url 'fact_sheet' %}">
-                            Fact Sheet
-                        </a>
-                    </li>
-                    <li class="side-navigation__item ">
-                        <a class="side-navigation__link" href="{% url 'management_page' %}">
-                            Management of the Project
+                        <a class="side-navigation__link" href="{% url 'material_available' %}">
+                            Material Available
                         </a>
                     </li>
                 </ul>
