--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -35,7 +35,7 @@
                     <a class="nav-link dropdown-toggle {% if 'about/' in request.path %} active {% endif %}" id="dropdown-about" data-bs-toggle="dropdown"
                        aria-expanded="false" role="button">About</a>
                     <ul class="dropdown-menu" aria-labelledby="dropdown-about">
-                        <li><a class="dropdown-item" href="{% url 'about_page' %}">About the Project</a></li>
+                        <li><a class="dropdown-item" href="{% url 'about_project' %}">About the Project</a></li>
                         <li><a class="dropdown-item" href="{% url 'aims_page' %}">Aims of the Project</a></li>
                         <li><a class="dropdown-item" href="{% url 'fact_sheet' %}">Fact Sheet</a></li>
                         <li><a class="dropdown-item" href="{% url 'management_page' %}">Management of the Project</a></li>
