--- a/templates/ctb/access_to_materials.html
+++ b/templates/ctb/access_to_materials.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %}
+{% extends 'ctb/research.html' %}
+
 {% load static %}
 
 {% block title %}
@@ -26,83 +27,42 @@
 
 {% endblock %}
 
-{% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="row">
-
-                <div class="col pb-4">
-                    <p>Applications to access biomaterials must be submitted via the Biosample Search facility.&nbsp;All
-                        applications for use of the bank are referred to an independent External Review Panel, which
-                        comprises experts nominated by the organisations which sponsor the project - the National Cancer
-                        Institute of the USA (NCI), and Sasakawa Health Foundation of Japan (SHF) - and the governments
-                        of the participating Eastern European countries (Ukraine and Russia).</p>
-                    <p>An overview of the application review procedure is provided in the flow diagram below. Details of
-                        the review procedure and of the criteria on which an application will be evaluated are given in
-                        the <span style="text-decoration: underline;"><a href="{% url 'fact_sheet' %}" target="_blank"
-                                                                         rel="noopener">Fact Sheet</a></span>.</p>
-                    <p><a href="{% url 'schema_review_of_applications' %}"> Schema for review of applications</a></p>
-                    <p>Distribution of materials to a Principal Investigator whose project has been approved will be
-                        authorised subject to:</p>
-                    <ol>
-                        <li>receipt of a signed agreement from the Principal Investigator to conform to the conditions
-                            set out in the Material and Data Transfer Agreement;
-                        </li>
-                        <li>modification of the number and size of samples required dependent on any amendments by the
-                            External Review Panel and the availability of the material.
-                        </li>
-                    </ol>
-                    <p>Each sample of nucleic acid or serum will be identified by a CTB sample number and accompanied by
-                        a minimum data set comprising the following information:</p>
-                    <ul>
-                        <li>age at accident - complying with HIPAA regulations</li>
-                        <li>age at operation - complying with HIPAA regulations</li>
-                        <li>sex</li>
-                        <li>oblast of residence</li>
-                        <li>International Pathology Review Panel diagnosis</li>
-                        <li>Estimated thyroid radiation dose (if requested by the researcher).</li>
-                    </ul>
-                    <p>If a project requires more clinical information than the minimum data set, this must be stated
-                        clearly in the application, particularly if this is an essential component of the project. Any
-                        such project will normally be carried out as a collaboration with the Eastern European institute
-                        involved in collections of the samples and, where appropriate, approval of the relevant Ethical
-                        Committee must be sought.</p>
-                    <p>Where possible, material for a given project will be provided in one batch, however, in some
-                        cases, provision may have to be made over a period of time.</p>
-                    <p>&nbsp;</p></div>
-
-                <div class="col-md-4 offset-md-1 pb-4">
-
-                    <ul class="side-navigation">
-                        <li class="side-navigation__item side-navigation__item--heading">
-                            <a href="{% url 'researchers_page' %}" class="side-navigation__link ">
-                                For Researchers
-                            </a>
-                        </li>
-                        <li class="side-navigation__item  side-navigation__link--active ">
-                            <a class="side-navigation__link" href="{% url 'access_to_materials' %}">
-                                Access to Materials
-                            </a>
-                        </li>
-{#                        <li class="side-navigation__item ">#}
-{#                            <a class="side-navigation__link"#}
-{#                               href="https://www.chernobyltissuebank.com/biosample-search/" target="_blank">#}
-{#                                CTB Biosample Search#}
-{#                            </a>#}
-{#                        </li>#}
-                        <li class="side-navigation__item ">
-                            <a class="side-navigation__link" href="{% url 'research_projects' %}">
-                                Research Projects Using CTB Materials
-                            </a>
-                        </li>
-                        <li class="side-navigation__item ">
-                            <a class="side-navigation__link" href="{% url 'material_available' %}">
-                                Material Available
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+{% block subcontent %}
+    <p>Applications to access biomaterials must be submitted via the Biosample Search facility.&nbsp;All
+        applications for use of the bank are referred to an independent External Review Panel, which
+        comprises experts nominated by the organisations which sponsor the project - the National Cancer
+        Institute of the USA (NCI), and Sasakawa Health Foundation of Japan (SHF) - and the governments
+        of the participating Eastern European countries (Ukraine and Russia).</p>
+    <p>An overview of the application review procedure is provided in the flow diagram below. Details of
+        the review procedure and of the criteria on which an application will be evaluated are given in
+        the <span style="text-decoration: underline;"><a href="{% url 'fact_sheet' %}" target="_blank"
+                                                         rel="noopener">Fact Sheet</a></span>.</p>
+    <p><a href="{% url 'schema_review_of_applications' %}"> Schema for review of applications</a></p>
+    <p>Distribution of materials to a Principal Investigator whose project has been approved will be
+        authorised subject to:</p>
+    <ol>
+        <li>receipt of a signed agreement from the Principal Investigator to conform to the conditions
+            set out in the Material and Data Transfer Agreement;
+        </li>
+        <li>modification of the number and size of samples required dependent on any amendments by the
+            External Review Panel and the availability of the material.
+        </li>
+    </ol>
+    <p>Each sample of nucleic acid or serum will be identified by a CTB sample number and accompanied by
+        a minimum data set comprising the following information:</p>
+    <ul>
+        <li>age at accident - complying with HIPAA regulations</li>
+        <li>age at operation - complying with HIPAA regulations</li>
+        <li>sex</li>
+        <li>oblast of residence</li>
+        <li>International Pathology Review Panel diagnosis</li>
+        <li>Estimated thyroid radiation dose (if requested by the researcher).</li>
+    </ul>
+    <p>If a project requires more clinical information than the minimum data set, this must be stated
+        clearly in the application, particularly if this is an essential component of the project. Any
+        such project will normally be carried out as a collaboration with the Eastern European institute
+        involved in collections of the samples and, where appropriate, approval of the relevant Ethical
+        Committee must be sought.</p>
+    <p>Where possible, material for a given project will be provided in one batch, however, in some
+        cases, provision may have to be made over a period of time.</p>
 {% endblock %}
