--- a/templates/ctb/privacy.html
+++ b/templates/ctb/privacy.html
@@ -15,13 +15,13 @@
 {% block page_header %}
 <div class="container">
         <h3 class="page-banner">Privacy Policy</h3>
-        <div>
-            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item active" aria-current="page">Privacy Policy</li>
-                </ol>
-            </nav>
-        </div>
+{#        <div>#}
+{#            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">#}
+{#                <ol class="breadcrumb">#}
+{#                    <li class="breadcrumb-item active" aria-current="page">Privacy Policy</li>#}
+{#                </ol>#}
+{#            </nav>#}
+{#        </div>#}
     </div>
 {% endblock %}
 {% block content %}
@@ -37,7 +37,7 @@
                     for commercial marketing or any purpose unrelated to the CTB mission and goals.
                 </p>
 
-                <h2>Types of Information Collected</h2>
+                <h5>Types of Information Collected</h5>
                 <p>
                     When you browse through any Web site, certain information about your visit can be collected. We automatically collect and
                     store the following type of information about your visit:
@@ -58,7 +58,7 @@
                     We use this information to measure the number of visitors to our site and its various sections and datasets to help make our site more useful to visitors.
                 </p>
 
-                <h2>How CTB Collects Information</h2>
+                <h5>How CTB Collects Information</h5>
                 <p>
                     CTB uses Google Analytics, Google Cloud Platform StackDriver Logging, and the CTB login process to collect
                     the information in the bulleted list in the Types of Information Collected section above. Google Analytics and
@@ -72,7 +72,7 @@
                     the mission of the CTB website and the NCI.
                 </p>
 
-                <h2>How CTB Uses Cookies</h2>
+                <h5>How CTB Uses Cookies</h5>
                 <p>
                     The Office of Management and Budget Memo
                     <a href="https://www.whitehouse.gov/sites/whitehouse.gov/files/omb/memoranda/2010/m10-22.pdf" target="_blank" rel="noopener noreferrer">
@@ -111,7 +111,7 @@
                     measurement and customization technologies when no PII is collected."
                 </p>
 
-                <h2>How Personal Information Is Protected</h2>
+                <h5>How Personal Information Is Protected</h5>
                 <p>
                     If you choose to log in to our site with your Google Account we will receive your email address and name as
                     listed in your Google Account profile. If you choose to make an account on our site using a personal email
@@ -120,7 +120,7 @@
                     provide to us in accordance with the Privacy Act of 1974, as amended (5 U.S.C. Section 552a).
                 </p>
 
-                <h2>Data Safeguarding and Privacy</h2>
+                <h5>Data Safeguarding and Privacy</h5>
 
                 <p>
                     CTB uses web measurement and customization technologies to help our Web sites function better for visitors
@@ -154,7 +154,7 @@
                     <li>Identities of all third-party vendors involved in the measurement and customization process</li>
                 </ul>
 
-                <h2>Data Retention and Access Limits</h2>
+                <h5>Data Retention and Access Limits</h5>
                 <p>
                     CTB will retain data collected using the following technologies long enough to achieve the specified
                     objective for which they were collected. The data generated from these activities falls under the National
