--- a/templates/ctb/saved_searches.html
+++ b/templates/ctb/saved_searches.html
@@ -13,21 +13,21 @@
 
 {% block page_name %}saved_searches{% endblock %}
 
-{% block page_header %}
-    <div class="container">
-        <div class="pt-3">
-            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item active" aria-current="page">My Saved Searches</li>
-                </ol>
-            </nav>
-        </div>
-    </div>
-
-{% endblock %}
+{#{% block page_header %}#}
+{#    <div class="container">#}
+{#        <div class="pt-3">#}
+{#            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">#}
+{#                <ol class="breadcrumb">#}
+{#                    <li class="breadcrumb-item active" aria-current="page">My Saved Searches</li>#}
+{#                </ol>#}
+{#            </nav>#}
+{#        </div>#}
+{#    </div>#}
+{##}
+{#{% endblock %}#}
 
 {% block content %}
-    <div class="container">
+    <div class="container pt-3">
         <div class="row">
             <div class="col">
                 <div class="border rounded bg-light p-3">
