--- a/templates/ctb/dashboard.html
+++ b/templates/ctb/dashboard.html
@@ -13,20 +13,20 @@
 {% block page_name %}dashboard{% endblock %}
 
 {% block page_header %}
-    <div class="container">
-        <div class="pt-3">
-            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item active" aria-current="page">Dashboard</li>
-                </ol>
-            </nav>
-        </div>
-    </div>
+{#    <div class="container">#}
+{#        <div class="pt-3">#}
+{#            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">#}
+{#                <ol class="breadcrumb">#}
+{#                    <li class="breadcrumb-item active" aria-current="page">Dashboard</li>#}
+{#                </ol>#}
+{#            </nav>#}
+{#        </div>#}
+{#    </div>#}
 
 {% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div class="container pt-3">
         <div class="row">
             <div class="col-4">
                 <div class="bg-light border rounded p-3">
